welcome.lessons.welcome.array.island.Island.scala.error
island:3: error: not found: value nums
  for (i <- 0 to nums.length -1) {
                 ^island:4: error: not found: value nums
    if (nums(i+1) = nums(i) + 1) {compteur = compteur + 1}
        ^island:4: error: not found: value nums
    if (nums(i+1) = nums(i) + 1) {compteur = compteur + 1}
                    ^