welcome.lessons.welcome.array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var compteur:Int = 0
  for (i <- 0 to nums.length -1) {
    if (nums(i+1) = nums(i) + 1) {compteur = compteur + 1}
  }
  return {compteur}
}